# wersynking

./: .gitignore  README.md  pyproject.toml
packaging/: we-rsynk-ing.desktop  we-rsynk-ing.spec  wersyncing.desktop  wersyncing.spec  wersynking.desktop  wersynking.spec
rsync_app/: __main__.py  app.py  controllers.py  db.py  inhibitor.py  models.py  mounts.py  preflight.py  probes.py  rsync.py  runner.py  theme.py  tray.py
rsync_app/qml/: Main.qml
rsync_app/qml/components/: CommandPreview.qml  IssueList.qml  LivenessDot.qml  OptionRow.qml  OptionsEditor.qml  OutputPanel.qml  OwnershipEditor.qml  RowActionButton.qml  ScrollComboBox.qml  SectionLabel.qml  SegmentedControl.qml  Sh.qml  Theme.qml  TreeRow.qml  Wordmark.qml  qmldir
rsync_app/qml/forms/: ConnectionForm.qml  ContainerForm.qml  DeleteConfirmDialog.qml  DeviceForm.qml  SourceLabelForm.qml  SyncConfirmDialog.qml
rsync_app/qml/pages/: ConnectionsPage.qml
scripts/: install_desktop.sh  screenshot.py  screenshot_runner.py  smoke_argv.py  smoke_forms.py  smoke_preflight.py  smoke_runner.py  smoke_tray.py
